--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "build/dist/main.js",
   "homepage": "./",
   "dependencies": {
+    "bootstrap": "^4.1.3",
     "react": "^16.6.3",
     "react-addons-css-transition-group": "^15.6.2",
     "react-addons-transition-group": "^15.6.2",
@@ -26,6 +27,7 @@
     "postinstall": "install-app-deps"
   },
   "devDependencies": {
+    "@types/bootstrap": "^4.1.2",
     "@types/jest": "^23.3.10",
     "@types/node": "^10.12.11",
     "@types/react": "^16.7.11",
