--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-addons-css-transition-group": "^15.6.2",
     "react-addons-transition-group": "^15.6.2",
     "react-dom": "^16.6.3",
+    "react-router-dom": "^4.3.1",
     "react-scripts-ts": "3.1.0",
     "reactstrap": "^6.5.0"
   },
@@ -32,6 +33,7 @@
     "@types/node": "^10.12.11",
     "@types/react": "^16.7.11",
     "@types/react-dom": "^16.0.11",
+    "@types/react-router-dom": "^4.3.1",
     "@types/reactstrap": "^6.4.3",
     "electron": "^3.0.10",
     "electron-builder": "^20.38.2",
