--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
     "react-scripts-ts": "3.1.0",
-    "reactstrap": "^6.5.0"
+    "react-sidenav": "^3.1.3",
+    "reactstrap": "^6.5.0",
+    "styled-components": "^4.1.2"
   },
   "scripts": {
     "start": "nf start -p 3000",
